# omni3_control

./: CLAUDE.md  package.xml  setup.cfg  setup.py
config/: roboclaw_params.yaml
omni3_control/: constants.py  encoder_test.py  go_stop_avoid_node.py  go_stop_fb_node.py  go_stop_node.py  kinematics.py  kinematics_node.py  move_1m_node.py  quintic.py  roboclaw.py
